deploy/webhook/webhook_service_ext.yaml

# Copyright Red Hat

apiVersion: v1
kind: Service
metadata:
  name: compute-operator-webhook-service-ext
  namespace: compute-config
  annotations:
    "service.beta.openshift.io/serving-cert-secret-name": compute-operator-webhook-service
spec:
  ports:
    - port: 8080
      targetPort: 6443
  selector:
    control-plane: compute-operator-webhook-service
