deploy/webhook/webhook_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-route
  annotations:
    kubernetes.io/tls-acme: 'true'
spec:
  host: webhook.apps.itdove.mgdsvcs.red-chesterfield.com
  to:
    kind: Service
    name: compute-operator-webhook-service
    weight: 100
  port:
    targetPort: 6443
  tls:
    termination: reencrypt
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEaDCCA1CgAwIBAgIIUYB+ko9MO0wwDQYJKoZIhvcNAQELBQAwNjE0MDIGA1UE
[...]
      5DTka5zN1HCiP3xTLmdcvOI9xDYvtwKcHmcDsQ==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDUTCCAjmgAwIBAgIIKb3onMUmkHgwDQYJKoZIhvcNAQELBQAwNjE0MDIGA1UE
[...]
      dclFvH3QYGmJHSWXUHfWikDVvyRK2O44MtEET9KBraJkFnJ3ww==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
