deploy/webhook/webhook_validating_config.yaml
# Copyright Red Hat

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: compute-operator-webhook-service
webhooks:
  - name: api.aws-4-10-16-sno-2x-e2e-d4hh7.mgdsvcs.red-chesterfield.com
    admissionReviewVersions: 
      - v1beta1
    sideEffects: None
    rules:
      - apiGroups:
          - singapore.open-cluster-management.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - registeredclusters
      - apiGroups:
          - singapore.open-cluster-management.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - clusterregistrars
    failurePolicy: Fail
    clientConfig:
      # caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVZQ0ZHWkU3eVdPNkxpUFZ5dVZVaEdTUlhEbi9RZXBNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1DOHgKTFRBckJnTlZCQU1NSkVGa2JXbHpjMmx2YmlCRGIyNTBjbTlzYkdWeUlGZGxZbWh2YjJzZ1JHVnRieUJEUVRBZQpGdzB5TWpBNE1EUXhOVEF4TlRsYUZ3MHlNakE1TURNeE5UQXhOVGxhTUVneFJqQkVCZ05WQkFNTVBXRndhUzVoCmQzTXROQzB4TUMweE5pMXpibTh0TW5ndFpUSmxMV1EwYUdnM0xtMW5aSE4yWTNNdWNtVmtMV05vWlhOMFpYSm0KYVdWc1pDNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGpwNGEwQUpXUgpueUJTNStVZk [...]
      url: webhook.apps.itdove.mgdsvcs.red-chesterfield.com/apis/admission.singapore.open-cluster-management.io/v1alpha1/registeredclustervalidators
      # service:
      #   namespace: default
      #   name: kubernetes
      #   path: /apis/admission.singapore.open-cluster-management.io/v1alpha1/registeredclustervalidators
      #   path: https://api.aws-4-10-16-sno-2x-e2e-d4hh7.mgdsvcs.red-chesterfield.com:6443/apis/admission.singapore.open-cluster-management.io/v1alpha1/registeredclustervalidators
